--- a/config.ini
+++ b/config.ini
@@ -24,3 +24,18 @@ group.id=update_demo_downloader
 
 [positioning]
 group.id=update_demo_positioning
+
+[central]
+group.id=update_demo_central
+
+[communication]
+group.id=update_demo_communication
+
+[hmi]
+group.id=update_demo_hmi
+
+[motion]
+group.id=update_demo_motion
+
+[sensors]
+group.id=update_demo_sensors
