--- a/config.ini
+++ b/config.ini
@@ -7,8 +7,8 @@ auto.offset.reset=earliest
 [monitor]
 group.id=update_demo_downloader
 
-[positioning]
-group.id=update_demo_positioning
+[position]
+group.id=update_demo_position
 
 [central]
 group.id=update_demo_central
@@ -24,3 +24,9 @@ group.id=update_demo_motion
 
 [sensors]
 group.id=update_demo_sensors
+
+[gps]
+group.id=update_demo_gps
+
+[camera]
+group.id=update_demo_camera
