Stable updated version

--- a/config.ini
+++ b/config.ini
@@ -13,8 +13,11 @@ group.id=update_demo_position
 [central]
 group.id=update_demo_central
 
-[communication]
-group.id=update_demo_communication
+[communication_in]
+group.id=update_demo_communication_in
+
+[communication_out]
+group.id=update_demo_communication_out
 
 [hmi]
 group.id=update_demo_hmi
